<?xml version="1.0"?>
<package format="3">
  <name>stage_ros</name>
  <version>1.8.0</version>
  <description>This package provides ROS specific hooks for stage</description>

  <maintainer email="william@osrfoundation.org">William Woodall</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/stage_ros</url>
  <url type="repository">https://github.com/ros-simulation/stage_ros</url>
  <url type="bugtracker">https://github.com/ros-simulation/stage_ros/issues</url>

  <author email="gerky@osrfoundation.org">Brian Gerky</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>stage</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <depend>tf2_geometry_msgs</depend>
<!--  <build_depend>rostest</build_depend>-->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
